--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,47 +1,47 @@
-noinst_PROGRAMS = test_nufi_cpu nufi_1d_multi_species_periodic test_nufi_cpu_2d test_cpp_interface restarted_nufi_1d_with_htensor restarted_nufi_2d_with_htensor restarted_nufi_3d_with_htensor
+noinst_PROGRAMS = test_nufi_cpu nufi_1d_multi_species_periodic test_nufi_cpu_2d #test_cpp_interface restarted_nufi_1d_with_htensor restarted_nufi_2d_with_htensor restarted_nufi_3d_with_htensor
 
 test_nufi_cpu_SOURCES = test_nufi_cpu.cpp
 test_nufi_cpu_LDADD   = $(top_builddir)/nufi/libnufi.a 
-test_nufi_cpu_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f
+test_nufi_cpu_LDADD  += -larmadillo -llapack -lopenblas -lfftw3 -lfftw3f
 
 nufi_1d_multi_species_periodic_SOURCES = nufi_1d_multi_species_periodic.cpp
 nufi_1d_multi_species_periodic_LDADD   = $(top_builddir)/nufi/libnufi.a 
-nufi_1d_multi_species_periodic_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f
+nufi_1d_multi_species_periodic_LDADD  += -larmadillo -llapack -lopenblas -lfftw3 -lfftw3f
 
 test_nufi_cpu_2d_SOURCES = test_nufi_cpu_2d.cpp
 test_nufi_cpu_2d_LDADD   = $(top_builddir)/nufi/libnufi.a 
-test_nufi_cpu_2d_LDADD  +=  $(BLAS_LIBS) -lfftw3 -lfftw3f
+test_nufi_cpu_2d_LDADD  +=  -larmadillo -llapack -lopenblas -lfftw3 -lfftw3f
 
-test_cpp_interface_SOURCES = test_cpp_interface.cpp
-test_cpp_interface_LDADD   = $(top_builddir)/nufi/libnufi.a 
-test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/package/libhtl.a 
-test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/cpp_interface/libchtlib.a /home/paul/Projekte/htlib/build/cross/libhtl_cross.a 
-test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/htens/libhtl_m_htensor.a /home/paul/Projekte/htlib/build/timer/libhtl_timer.a 
-test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/linalg/libhtl_linalg.a /home/paul/Projekte/htlib/build/precision/libhtl_m_precision.a /usr/local/lib/libopenblas.so
-test_cpp_interface_LDADD  += $(BLAS_LIBS) -lgfortran -lfftw3 -lfftw3f
+#test_cpp_interface_SOURCES = test_cpp_interface.cpp
+#test_cpp_interface_LDADD   = $(top_builddir)/nufi/libnufi.a 
+#test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/package/libhtl.a 
+#test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/cpp_interface/libchtlib.a /home/paul/Projekte/htlib/build/cross/libhtl_cross.a 
+#test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/htens/libhtl_m_htensor.a /home/paul/Projekte/htlib/build/timer/libhtl_timer.a 
+#test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/linalg/libhtl_linalg.a /home/paul/Projekte/htlib/build/precision/libhtl_m_precision.a /usr/local/lib/libopenblas.so
+#test_cpp_interface_LDADD  += $(BLAS_LIBS) -lgfortran -lfftw3 -lfftw3f
 
-restarted_nufi_1d_with_htensor_SOURCES = restarted_nufi_1d_with_htensor.cpp
-restarted_nufi_1d_with_htensor_LDADD   = $(top_builddir)/nufi/libnufi.a 
-restarted_nufi_1d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/package/libhtl.a 
-restarted_nufi_1d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/cpp_interface/libchtlib.a /home/paul/Projekte/htlib/build/cross/libhtl_cross.a 
-restarted_nufi_1d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/htens/libhtl_m_htensor.a /home/paul/Projekte/htlib/build/timer/libhtl_timer.a 
-restarted_nufi_1d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/linalg/libhtl_linalg.a /home/paul/Projekte/htlib/build/precision/libhtl_m_precision.a /usr/local/lib/libopenblas.so
-restarted_nufi_1d_with_htensor_LDADD  += $(BLAS_LIBS) -lgfortran -lfftw3 -lfftw3f
+#restarted_nufi_1d_with_htensor_SOURCES = restarted_nufi_1d_with_htensor.cpp
+#restarted_nufi_1d_with_htensor_LDADD   = $(top_builddir)/nufi/libnufi.a 
+#restarted_nufi_1d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/package/libhtl.a 
+#restarted_nufi_1d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/cpp_interface/libchtlib.a /home/paul/Projekte/htlib/build/cross/libhtl_cross.a 
+#restarted_nufi_1d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/htens/libhtl_m_htensor.a /home/paul/Projekte/htlib/build/timer/libhtl_timer.a 
+#restarted_nufi_1d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/linalg/libhtl_linalg.a /home/paul/Projekte/htlib/build/precision/libhtl_m_precision.a /usr/local/lib/libopenblas.so
+#restarted_nufi_1d_with_htensor_LDADD  += $(BLAS_LIBS) -lgfortran -lfftw3 -lfftw3f
 
-restarted_nufi_2d_with_htensor_SOURCES = restarted_nufi_2d_with_htensor.cpp
-restarted_nufi_2d_with_htensor_LDADD   = $(top_builddir)/nufi/libnufi.a 
-restarted_nufi_2d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/package/libhtl.a 
-restarted_nufi_2d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/cpp_interface/libchtlib.a /home/paul/Projekte/htlib/build/cross/libhtl_cross.a 
-restarted_nufi_2d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/htens/libhtl_m_htensor.a /home/paul/Projekte/htlib/build/timer/libhtl_timer.a 
-restarted_nufi_2d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/linalg/libhtl_linalg.a /home/paul/Projekte/htlib/build/precision/libhtl_m_precision.a /usr/local/lib/libopenblas.so
-restarted_nufi_2d_with_htensor_LDADD  += $(BLAS_LIBS) -lgfortran -lfftw3 -lfftw3f
+#restarted_nufi_2d_with_htensor_SOURCES = restarted_nufi_2d_with_htensor.cpp
+#restarted_nufi_2d_with_htensor_LDADD   = $(top_builddir)/nufi/libnufi.a 
+#restarted_nufi_2d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/package/libhtl.a 
+#restarted_nufi_2d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/cpp_interface/libchtlib.a /home/paul/Projekte/htlib/build/cross/libhtl_cross.a 
+#restarted_nufi_2d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/htens/libhtl_m_htensor.a /home/paul/Projekte/htlib/build/timer/libhtl_timer.a 
+#restarted_nufi_2d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/linalg/libhtl_linalg.a /home/paul/Projekte/htlib/build/precision/libhtl_m_precision.a /usr/local/lib/libopenblas.so
+#restarted_nufi_2d_with_htensor_LDADD  += $(BLAS_LIBS) -lgfortran -lfftw3 -lfftw3f
 
-restarted_nufi_3d_with_htensor_SOURCES = restarted_nufi_3d_with_htensor.cpp
-restarted_nufi_3d_with_htensor_LDADD   = $(top_builddir)/nufi/libnufi.a 
-restarted_nufi_3d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/package/libhtl.a 
-restarted_nufi_3d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/cpp_interface/libchtlib.a /home/paul/Projekte/htlib/build/cross/libhtl_cross.a 
-restarted_nufi_3d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/htens/libhtl_m_htensor.a /home/paul/Projekte/htlib/build/timer/libhtl_timer.a 
-restarted_nufi_3d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/linalg/libhtl_linalg.a /home/paul/Projekte/htlib/build/precision/libhtl_m_precision.a /usr/local/lib/libopenblas.so
-restarted_nufi_3d_with_htensor_LDADD  += $(BLAS_LIBS) -lgfortran -lfftw3 -lfftw3f
+#restarted_nufi_3d_with_htensor_SOURCES = restarted_nufi_3d_with_htensor.cpp
+#restarted_nufi_3d_with_htensor_LDADD   = $(top_builddir)/nufi/libnufi.a 
+#restarted_nufi_3d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/package/libhtl.a 
+#restarted_nufi_3d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/cpp_interface/libchtlib.a /home/paul/Projekte/htlib/build/cross/libhtl_cross.a 
+#restarted_nufi_3d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/htens/libhtl_m_htensor.a /home/paul/Projekte/htlib/build/timer/libhtl_timer.a 
+#restarted_nufi_3d_with_htensor_LDADD  += /home/paul/Projekte/htlib/build/linalg/libhtl_linalg.a /home/paul/Projekte/htlib/build/precision/libhtl_m_precision.a /usr/local/lib/libopenblas.so
+#restarted_nufi_3d_with_htensor_LDADD  += $(BLAS_LIBS) -lgfortran -lfftw3 -lfftw3f
 
 # Blas is linked twice. Check if this is really necessary.
